[package]
name = "one-balance-rust"
version = "0.2.0"
edition = "2021"
description = "An intelligent API gateway for routing requests to Cloudflare AI Gateway or native AI providers, built with Rust and running on Cloudflare Workers."
authors = ["[inevity@approachai.com]"]
license = "MIT"
repository = "https://github.com/inevity/theone"
keywords = ["cloudflare", "worker", "api-gateway", "rust", "ai"]
categories = ["web-programming", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[features]
# By default, we will use the recommended pattern: a Durable Object with its internal SQLite DB.
default = ["raw_d1", "axumrouter", "wait_until", "tracing-worker"]
# default = ["sync_cli"]
#default = ["raw_d1", "axumrouter", "use_queue"]

# --- Custom Features ---
# Strategy: Use ctx.waitUntil for background tasks. Available on all plans.
wait_until = []
# Strategy: Use worker queues for background tasks. Requires a paid plan.
use_queue = []
#cargo build --no-default-features --bin sync-cli --features sync_cli
tracing-worker = ["tracing-subscriber/time","tracing-subscriber/env-filter"]
tracing-cli = ["tracing-subscriber/env-filter"]
sync_cli = [
    "clap",
    "tokio",
    "reqwest",
    "tracing-cli",
]



# --- Router Features ---
axumrouter = ["axum", "http", "http-body", "tower-service"]

# --- Storage Strategy Features ---
# Strategy 1: Durable Object with its built-in Key-Value storage.
do_kv = []
# Strategy 2: Durable Object with its built-in SQLite database.
do_sqlite = ["worker/d1"] # The 'd1' worker feature enables DO SQLite storage.
# Strategy 3: Main worker accesses a D1 database directly.
raw_d1 = ["worker/d1"]


[dependencies]
# We disable default features to have precise control via our own feature flags.
# worker = { version = "0.6.0", default-features = false, features = ["macros", "d1"] }
worker = { version ="0.6", default-features = false, features = ["d1", "http", "axum", "timezone", "queue"] }
#worker = { path = "../../workers-rs/worker", default-features = false, features = ["d1", "http", "axum", "timezone", "queue"] }

worker-macros = { version ="0.6", default-features = false, features = ["http"] }
# Serialization and Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"


# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging and Debugging
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"], optional = true }
console_error_panic_hook = "0.1.7"

# Utilities
futures-util = "0.3"
# wasm-timer = "0.2"
# web-sys = { version = "0.3", features = ["AbortController", "AbortSignal"] }
uuid = { version = "1.8", features = ["v4", "js"] }
url = "2.5"
js-sys = "0.3"
rand = "0.9"
phf = { version = "0.12", features = ["macros"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
once_cell = "1.19"
mini-moka = { path = "../mini-moka", features = ["sync"] }
#getrandom = { version = "0.2", features = ["js"] }


# --- Optional Axum Dependencies ---
# axum = { version = "0.8", optional = true }
axum = { version = "0.8", default-features = false, optional = true, features = ["macros", "form", "query", "json"] }
http = { version = "1.3", optional = true }
http-body = { version = "1.0", optional = true }
tower-service = { version = "0.3", optional = true }

# UI Dependencies
maud = { version = "0.27", features = ["axum"] }
tower-cookies = "0.11"
time = { version = "0.3", features = ['wasm-bindgen'] }
base64 = "0.22"



toasty = { path = "../toasty/crates/toasty", features = ["serde", "hybrid-builder"] }
toasty-core = { path = "../toasty/crates/toasty-core" }
toasty-sql = { path = "../toasty/crates/toasty-sql" }

# Dependencies for the sync_cli binary
clap = { version = "4.5", features = ["derive", "env"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
dotenvy = "0.15"


[dev-dependencies]
axum-test = "15.1"
mockito = "1.4"

[[bin]]
name = "sync-cli"
path = "src/bin/sync_cli.rs"
required-features = ["sync_cli"]







[profile.release]
lto = true
strip = true
opt-level = "z"
# [profile.release]
# debug = true
# strip = false

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--strip-debug", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

